fix : menu icon on iphone

--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -57,15 +57,16 @@
           font-size: 1.5rem;
           z-index: 21;
           cursor: pointer;
-          &:hover{
-          @include zoom-effect;
           &-icon{
+            width: 100%;
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
             align-content: center;
-          }
         }
+        &:hover{
+          @include zoom-effect;
+      }
         }
         &-content{
           display: none;
